# neonpay

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Procfile  README.md  STRUCTURE.md  config.py  coverage.xml  docker-compose.yml  language.py  main.py  pyproject.toml  qisa_tesvir.txt  requirements.txt  setup.py
.github/: README.md
.github/codeql/: codeql-config.yml
.github/scripts/: check_pypi_version.py  cleanup.py  update_readme_version.py
.github/workflows/: ci.yml  codeql.yml  dependencies.yml  docs.yml  publish.yml  pypi_publish.yml  release.yml  test.yml
docs/: ADVANCED_FEATURES.md  CHANGELOG.md  CHANGELOG.rst  MULTI_BOT_ANALYTICS.md  MULTI_BOT_SYNC.md  Makefile  NEW_FEATURES_v2.6.0.md  NEW_FEATURES_v2.6.0.rst  README.md  SYNC_README.md  conf.py  index.rst  requirements.txt
docs/_build/html/: CHANGELOG.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctree/: CHANGELOG.doctree  environment.pickle  index.doctree
docs/_build/html/.doctree/az/: API.doctree  FAQ.doctree  README.doctree  SECURITY.doctree  index.doctree
docs/_build/html/.doctree/en/: API.doctree  FAQ.doctree  README.doctree  SECURITY.doctree  index.doctree
docs/_build/html/.doctree/ru/: API.doctree  FAQ.doctree  README.doctree  SECURITY.doctree  index.doctree
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/az/: index.rst.txt
docs/_build/html/_sources/en/: index.rst.txt
docs/_build/html/_sources/ru/: index.rst.txt
docs/_build/html/az/: API.html  FAQ.html  README.html  SECURITY.html  index.html
docs/_build/html/en/: API.html  FAQ.html  README.html  SECURITY.html  index.html
docs/_build/html/ru/: API.html  FAQ.html  README.html  SECURITY.html  index.html
docs/az/: API.md  README.md  README.rst
docs/en/: API.md  README.md  SECURITY.md
docs/ru/: API.md  README.md  README.rst
examples/: CHANGELOG.md  README.md  advanced_features_example.py  aiogram_example.py  aiogram_example_README.md  botapi_example.py  middleware_example.py  multi_bot_analytics_example.py  multi_bot_sync_example.py  ptb_example.py  pyrogram_bot.py  pyrogram_example.py  raw_api_example.py  simplified_bot_comparison.py  sync_demo.py  telebot_example.py  webhook_server_example.py  your_current_vs_neonpay.py
helpers/: __init__.py  activity.py  utils.py
langs/: az.yml  en.yml  ru.yml
modules/: __init__.py  antiflood.py  antireklam.py  antispam.py  antispammer.py  antivulgar.py  broadcast.py  captcha.py  chatbot  commands.py  help.py  moderator.py  mute_utils.py  ping.py  qrup_qeydiyyati.py  reload.py  report.py  resetdb.py  settings.py  start.py  statistics.py  topbadboy.py  weekly_reports.py  yetkiyoxluyan.py
modules/botversion/: README.md  __init__.py  version.py
modules/botversion/versions/: ver1.0.0.txt  ver2.0.0.txt  ver2.1.0.txt  ver2.2.0.txt  ver2.3.0.txt
modules/economy/: __init__.py  achievements.py  advanced_pricing.py  auto_updater.py  chart_generator.py  currency.py  daily_bonus.py  database.py  economy.py  fix_balances.py  profile.py
modules/vulgarwords/: az.txt  tr.txt
neon_stars_payments/: __init__.py  errors.py  payments.py
neonpay/: __init__.py  _version.py  analytics.py  backup.py  cli.py  core.py  errors.py  event_collector.py  factory.py  localization.py  middleware.py  multi_bot_analytics.py  notifications.py  payments.py  promotions.py  security.py  subscriptions.py  sync.py  templates.py  utils.py  web_analytics.py  web_sync.py  webhooks.py
neonpay.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
neonpay/adapters/: __init__.py  aiogram_adapter.py  base.py  botapi_adapter.py  ptb_adapter.py  pyrogram_adapter.py  raw_api_adapter.py  telebot_adapter.py
neonpay/translations/: az.json  en.json  ru.json
oyunlar/: __init__.py  kagizqaycidas.py  love_meter.py  qeddar_soz.py  test_oyunu.py
tests/: test_adapters.py  test_botapi_adapter.py  test_core.py  test_factory.py  test_payments.py  test_utils.py  test_validation.py
