[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neonpay"
version = "0.0.1"
description = "Простая библиотека для приёма оплат звёздами (XTR) в Telegram-ботах на Pyrogram"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Abbas Sultanov", email = "sultanov.abas@outlook.com" }
]
keywords = ["telegram", "pyrogram", "payments", "stars", "xtr", "donations"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.9"

dependencies = [
    "pyrogram>=2.0.106",
]

[project.urls]
Homepage = "https://github.com/Abbasxan/neonpay"
Repository = "https://github.com/Abbasxan/neonpay"
Issues = "https://github.com/Abbasxan/neonpay/issues"
Telegram = "https://t.me/neonsahib"
